All_Component_DX/force-app/main/default/objects/SPM_Average_Response_Time__c/SPM_Average_Response_Time__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Average Response Time is metric to communicate visits that were done within the specified SLA.</description>
    <label>SPM - Average Response Time</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Average Response Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>