All_Component_DX/force-app/main/default/objects/SPM_Average_Response_Time__c/fields/Actual_Initial_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Initial_Response_Time__c</fullName>
    <description>Duration of minutes in which Initial Response captured</description>
    <inlineHelpText>Duration of minutes in which Initial Response captured</inlineHelpText>
    <label>Actual Initial Response Time (In Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>