All_Component_DX/force-app/main/default/objects/SPM_Average_Response_Time__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look to Product</description>
    <inlineHelpText>Look to Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SPM - Average Response Times</relationshipLabel>
    <relationshipName>SPM_Average_Response_Times1</relationshipName>
    <type>Lookup</type>
</CustomField>