All_Component_DX/force-app/main/default/objects/SPM_Average_Response_Time__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Service Request</description>
    <inlineHelpText>Lookup to Service Request</inlineHelpText>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>SPM - Average Response Times</relationshipLabel>
    <relationshipName>SPM_Average_Response_Times</relationshipName>
    <type>Lookup</type>
</CustomField>