All_Component_DX/force-app/main/default/objects/SPM_Average_Response_Time__c/fields/SLA_Onsite_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Onsite_Response_Time__c</fullName>
    <description>Number of minutes Configured in the SLA Rule for Onsite Response</description>
    <inlineHelpText>Number of minutes Configured in the SLA Rule for Onsite Response</inlineHelpText>
    <label>SLA Onsite Response Time (In Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>