All_Component_DX/force-app/main/default/objects/SPM_Average_Response_Time__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look to Technician.</description>
    <inlineHelpText>Look to Technician.</inlineHelpText>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>SPM - Average Response Times</relationshipLabel>
    <relationshipName>SPM_Average_Response_Times</relationshipName>
    <type>Lookup</type>
</CustomField>